# Multiomics_GraphRAG_Agent_Platform

./: .gitignore  README.md  项目需求说明.docx
backend/: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: agent.py  datasets.py  graph.py  health.py  omics_stats.py
backend/app/core/: config.py  neo4j_client.py  postgres.py
backend/app/repositories/: experiment_dataset_repository.py  graph_repository.py
backend/app/schemas/: agent.py  datasets.py  graph.py  health.py  omics_stats.py
backend/app/services/: embedding_client.py  fastagi_service.py  graph_service.py  omics_stats_service.py  rerank_client.py  semantic_retrieval.py
backend/app/services/omics_stats/: excel_parser.py  ranking.py  stats_engine.py
backend/config/: settings.example.toml
backend/db/migrations/: 001_agent_chat_history.sql  002_experiment_datasets.sql
backend/scripts/: import_windows_tmp_graph.py  reembed_graph_node_names.py
backend/tests/: test_agent_routes.py  test_config.py  test_graph_repository.py  test_graph_routes.py  test_health.py  test_semantic_retrieval_config.py
backend/tests/omics_stats/: test_group_parser.py  test_omics_stats_routes.py  test_stats_engine.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/templates/: multiomics-experiment-template.xlsx
frontend/src/: App.vue  styles.css
frontend/src/api/: client.js
